# basic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  WORKSPACE
basic/: BUILD.bazel  CMakeLists.txt  compiler_config_setting.bzl
basic/algorithm/: BUILD.bazel  CMakeLists.txt  algorithm.h  algorithm_test.cc  container.h  container_test.cc  equal_benchmark.cc
basic/base/: BUILD.bazel  CMakeLists.txt  attributes.h  bit_cast_test.cc  call_once.h  call_once_test.cc  casts.h  config.h  config_test.cc  const_init.h  dynamic_annotations.cc  dynamic_annotations.h  exception_safety_testing_test.cc  inline_variable_test.cc  inline_variable_test_a.cc  inline_variable_test_b.cc  invoke_test.cc  log_severity.cc  log_severity.h  log_severity_test.cc  macros.h  optimization.h  policy_checks.h  port.h  raw_logging_test.cc  spinlock_test_common.cc  thread_annotations.h  throw_delegate_test.cc
basic/base/internal/: atomic_hook.h  atomic_hook_test.cc  bits.h  bits_test.cc  cmake_thread_test.cc  cycleclock.cc  cycleclock.h  direct_mmap.h  endian.h  endian_test.cc  exception_safety_testing.cc  exception_safety_testing.h  exception_testing.h  hide_ptr.h  identity.h  inline_variable.h  inline_variable_testing.h  invoke.h  low_level_alloc.cc  low_level_alloc.h  low_level_alloc_test.cc  low_level_scheduling.h  per_thread_tls.h  pretty_function.h  raw_logging.cc  raw_logging.h  scheduling_mode.h  scoped_set_env.cc  scoped_set_env.h  scoped_set_env_test.cc  spinlock.cc  spinlock.h  spinlock_akaros.inc  spinlock_benchmark.cc  spinlock_linux.inc  spinlock_posix.inc  spinlock_wait.cc  spinlock_wait.h  spinlock_win32.inc  sysinfo.cc  (+13 more)
basic/container/: BUILD.bazel  CMakeLists.txt  fixed_array.h  fixed_array_benchmark.cc  fixed_array_exception_safety_test.cc  fixed_array_test.cc  flat_hash_map.h  flat_hash_map_test.cc  flat_hash_set.h  flat_hash_set_test.cc  inlined_vector.h  inlined_vector_benchmark.cc  inlined_vector_exception_safety_test.cc  inlined_vector_test.cc  node_hash_map.h  node_hash_map_test.cc  node_hash_set.h  node_hash_set_test.cc
basic/container/internal/: common.h  compressed_tuple.h  compressed_tuple_test.cc  container_memory.h  (+41 more)
basic/copts/: BasicConfigureCopts.cmake  GENERATED_BasicCopts.cmake  GENERATED_copts.bzl  configure_copts.bzl  copts.py  generate_copts.py
basic/debugging/: BUILD.bazel  CMakeLists.txt  failure_signal_handler.cc  failure_signal_handler.h  failure_signal_handler_test.cc  leak_check.cc  leak_check.h  leak_check_disable.cc  leak_check_fail_test.cc  leak_check_test.cc  stacktrace.cc  stacktrace.h  symbolize.cc  symbolize.h  symbolize_elf.inc  symbolize_test.cc  symbolize_unimplemented.inc  symbolize_win32.inc
basic/flags/: BUILD.bazel  CMakeLists.txt  config.h  config_test.cc  declare.h  flag.cc  flag.h  flag_test.cc  flag_test_defs.cc  marshalling.cc  marshalling.h  marshalling_test.cc  parse.cc  parse.h  parse_test.cc  usage.cc  usage.h  usage_config.cc  usage_config.h  usage_config_test.cc
basic/hash/: BUILD.bazel  CMakeLists.txt  hash.h  hash_test.cc  hash_testing.h
basic/memory/: BUILD.bazel  CMakeLists.txt  memory.h  memory_exception_safety_test.cc  memory_test.cc
basic/meta/: BUILD.bazel  CMakeLists.txt  type_traits.h  type_traits_test.cc
basic/numeric/: BUILD.bazel  CMakeLists.txt  int128.cc  int128.h  int128_benchmark.cc  int128_have_intrinsic.inc  int128_no_intrinsic.inc  int128_stream_test.cc  int128_test.cc
basic/random/: BUILD.bazel  benchmarks.cc  bernoulli_distribution.h  bernoulli_distribution_test.cc  beta_distribution.h  beta_distribution_test.cc  discrete_distribution.cc  discrete_distribution.h  discrete_distribution_test.cc  distribution_format_traits.h  distributions.h  distributions_test.cc  examples_test.cc  exponential_distribution.h  exponential_distribution_test.cc  gaussian_distribution.cc  gaussian_distribution.h  gaussian_distribution_test.cc  generators_test.cc  log_uniform_int_distribution.h  log_uniform_int_distribution_test.cc  poisson_distribution.h  poisson_distribution_test.cc  random.h  seed_gen_exception.cc  seed_gen_exception.h  seed_sequences.cc  seed_sequences.h  seed_sequences_test.cc  uniform_int_distribution.h  uniform_int_distribution_test.cc  uniform_real_distribution.h  uniform_real_distribution_test.cc  zipf_distribution.h  zipf_distribution_test.cc
basic/strings/: BUILD.bazel  CMakeLists.txt  ascii.cc  ascii.h  ascii_benchmark.cc  ascii_test.cc  charconv.cc  charconv.h  charconv_benchmark.cc  charconv_test.cc  escaping.cc  escaping.h  escaping_benchmark.cc  escaping_test.cc  match.cc  match.h  match_test.cc  numbers.cc  numbers.h  numbers_benchmark.cc  numbers_test.cc  str_cat.cc  str_cat.h  str_cat_benchmark.cc  str_cat_test.cc  str_format.h  str_format_test.cc  str_join.h  str_join_benchmark.cc  str_join_test.cc  str_replace.cc  str_replace.h  str_replace_benchmark.cc  str_replace_test.cc  str_split.cc  str_split.h  str_split_benchmark.cc  str_split_test.cc  string_view.cc  string_view.h  (+7 more)
basic/synchronization/: BUILD.bazel  CMakeLists.txt  barrier.cc  barrier.h  barrier_test.cc  blocking_counter.cc  blocking_counter.h  blocking_counter_test.cc  lifetime_test.cc  mutex.cc  mutex.h  mutex_benchmark.cc  mutex_test.cc  notification.cc  notification.h  notification_test.cc
basic/time/: BUILD.bazel  CMakeLists.txt  civil_time.cc  civil_time.h  civil_time_benchmark.cc  civil_time_test.cc  clock.cc  clock.h  clock_benchmark.cc  clock_test.cc  duration.cc  duration_benchmark.cc  duration_test.cc  format.cc  format_benchmark.cc  format_test.cc  time.cc  time.h  time_benchmark.cc  time_test.cc  time_zone_test.cc
basic/types/: BUILD.bazel  CMakeLists.txt  any.h  any_exception_safety_test.cc  any_test.cc  bad_any_cast.cc  bad_any_cast.h  bad_optional_access.cc  bad_optional_access.h  bad_variant_access.cc  bad_variant_access.h  compare.h  compare_test.cc  optional.h  optional_exception_safety_test.cc  optional_test.cc  span.h  span_test.cc  variant.h  variant_benchmark.cc  variant_exception_safety_test.cc  variant_test.cc
basic/utility/: BUILD.bazel  CMakeLists.txt  utility.h  utility_test.cc
(+222 files in other folders)
